Bug 451746 - There is "Undo" but no "Redo"
Summary: There is "Undo" but no "Redo"
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.2
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: usability
: 452366 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-03-20 22:30 UTC by php4fan
Modified: 2025-09-07 10:24 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description php4fan 2022-03-20 22:30:33 UTC
When there is Undo there should always be Redo.
Dolphin has Undo but it has no Redo.
Comment 1 Nate Graham 2022-04-08 15:10:18 UTC
*** Bug 452366 has been marked as a duplicate of this bug. ***
Comment 2 Konstantin 2022-04-09 14:15:52 UTC Comment hidden (spam)
Comment 3 Nate Graham 2022-04-09 14:18:15 UTC Comment hidden (spam)
Comment 4 Konstantin 2022-04-09 14:24:04 UTC Comment hidden (spam)
Comment 5 Nate Graham 2022-04-10 16:14:59 UTC Comment hidden (spam)
Comment 6 Grant Gryczan 2025-02-13 02:30:09 UTC
On Windows, I would often subconsciously undo (ctrl+Z) and then redo (ctrl+shift+Z) the last operation I did (e.g. renaming a file) just to double-check that I did it correctly. I never realized I did this until I noticed it didn't work in KDE.
Comment 7 Gleb Kasachou 2025-07-15 17:32:38 UTC
I'd like to start working on this bug and see if I can implement Redo support in Dolphin. I am still getting familiar with the code, but I wanted to mention it here in case someone else is thinking about it too.
Comment 8 Konstantin 2025-07-15 18:08:42 UTC
(In reply to Gleb Kasachou from comment #7)
> I'd like to start working on this bug and see if I can implement Redo
> support in Dolphin. I am still getting familiar with the code, but I wanted
> to mention it here in case someone else is thinking about it too.

This would be extremely important and useful.
Comment 9 Bug Janitor Service 2025-07-21 17:55:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1941
Comment 10 Bug Janitor Service 2025-07-22 09:56:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1000
Comment 11 Méven 2025-07-28 08:48:30 UTC
Git commit 0204ac98ad8dced42b6386fb68e046dd3c53fb55 by Méven Car, on behalf of Gleb Kasachou.
Committed on 28/07/2025 at 08:48.
Pushed by meven into branch 'master'.

widgets: Add redo support to FileUndoManager

This commit introduces support for redoing file operations in
FileUndoManager. Since it is now possible to redo any operation that has
been undone. The FileUndoManagerTest has been updated accordingly.

Changes

* Redo support has been added
* A confirmation dialog previously appeared before any undo operation that deletes files or folders. Since any destructive changes (with one exception, which is already covered by another confirmation popup) can now be reverted with a redo, this dialog has been removed
* `FileUndoManagerTest` has been modified to reflect the changes
* Fixed a bug where cancelling an `UndoJob` while it was running caused a segmentation fault
* Refactored the undo logic: the `REMOVINGLINKS` step has been removed and its functionality merged into the `MOVINGFILES` step, since link deletions are now handled alongside other file operations
* Limited the number of state change events are emitted

M  +231  -19   autotests/fileundomanagertest.cpp
M  +1    -0    autotests/fileundomanagertest.h
M  +327  -148  src/widgets/fileundomanager.cpp
M  +41   -1    src/widgets/fileundomanager.h
M  +24   -15   src/widgets/fileundomanager_p.h

https://invent.kde.org/frameworks/kio/-/commit/0204ac98ad8dced42b6386fb68e046dd3c53fb55
Comment 12 Méven 2025-09-07 10:24:33 UTC
Git commit bfa9c13cb24da62bea8d45f9f99a884a50a039a3 by Méven Car, on behalf of Gleb Kasachou.
Committed on 07/09/2025 at 10:24.
Pushed by meven into branch 'master'.

Add support for Redo operations

This MR updates Dolphin to support redo functionality added in KIO's FileUndoManager. It enables triggering redo operations from the user interface and ensures appropriate integration with the undo/redo command flow.

Require: [!1941](https://invent.kde.org/frameworks/kio/-/merge_requests/1941)

M  +47   -0    src/dolphinmainwindow.cpp
M  +14   -0    src/dolphinmainwindow.h
M  +1    -3    src/dolphinui.rc
M  +1    -3    src/dolphinuiforphones.rc

https://invent.kde.org/system/dolphin/-/commit/bfa9c13cb24da62bea8d45f9f99a884a50a039a3