Add support for Redo operations

This MR updates Dolphin to support redo functionality added in KIO's FileUndoManager. It enables triggering redo operations from the user interface and ensures appropriate integration with the undo/redo command flow.

Require: [!1941](https://invent.kde.org/frameworks/kio/-/merge_requests/1941)

BUG: 451746